<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.xiaobukuaipao.youngmam.widget.YoungActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/color_action_bar">
    </com.xiaobukuaipao.youngmam.widget.YoungActionBar>

    <LinearLayout android:id="@+id/register_edit_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:background="@drawable/rectangle_white_radius5_bg"
        android:layout_below="@+id/action_bar">

        <com.xiaobukuaipao.youngmam.form.FormEditText
            xmlns:editTextForm="http://schemas.android.com/apk/res-auto"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_phone"
            android:padding="15dp"
            android:background="@android:color/transparent"
            android:inputType="phone"
            editTextForm:testType="phone"
            app:font="fzltxihk"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_e8e8e8" />

        <com.xiaobukuaipao.youngmam.form.FormEditText
            xmlns:editTextForm="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password"
            android:padding="15dp"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            editTextForm:testType="alphaNumeric"
            app:font="fzltxihk"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_e8e8e8" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/str_get_verify_code"
                android:textColor="@color/color_ff4c51"
                android:textSize="@dimen/text_size_16sp"
                android:background="@color/label_item_bg"
                app:font="fzltxihk"/>

            <com.xiaobukuaipao.youngmam.form.FormEditText
                xmlns:editTextForm="http://schemas.android.com/apk/res-auto"
                android:id="@+id/verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_verify_code"
                android:layout_toLeftOf="@+id/get_verify_code"
                android:padding="15dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                editTextForm:testType="numeric"
                app:font="fzltxihk"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton android:id="@+id/btn_reset_passowrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/btn_login_unpress"
            android:background="@android:color/transparent">

        </ImageButton>

    </RelativeLayout>

</RelativeLayout>