<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff4c51">

    <ImageView android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/fairy_bg"/>

    <com.xiaobukuaipao.youngmam.widget.YoungActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@android:color/transparent">
    </com.xiaobukuaipao.youngmam.widget.YoungActionBar>

    <RelativeLayout android:id="@+id/baby_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="32dp">

        <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/select_baby_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_select_baby_gender"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:font="fzltxihk"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/select_baby_gender"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/select_baby_gender"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout android:id="@+id/baby_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baby_gender"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp">

        <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/boy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_boy"
            android:textColor="@color/register_text"
            android:textSize="@dimen/text_size_14sp"
            android:background="@drawable/btn_mam_register_bg"
            app:font="fzltxihk"/>

        <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/girl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_girl"
            android:textColor="@color/register_text"
            android:textSize="@dimen/text_size_14sp"
            android:background="@drawable/btn_mam_register_bg"
            app:font="fzltxihk"/>

    </LinearLayout>

    <RelativeLayout android:id="@+id/birth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baby_gender_layout"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="32dp">

        <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/select_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_select_birth"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:font="fzltxihk"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/select_birth"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/select_birth"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <com.xiaobukuaipao.youngmam.font.FontTextView android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_layout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/str_birthday"
        android:textColor="@color/register_text"
        android:textSize="@dimen/text_size_14sp"
        android:background="@drawable/btn_mam_register_bg"
        app:font="fzltxihk"/>

    <ImageButton android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@mipmap/btn_login_unpress"
        android:background="@android:color/transparent">

    </ImageButton>

</RelativeLayout>